--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,26 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# SentinelCore Language Attributes
+# This helps GitHub detect languages correctly
+
+# Python
+*.py linguist-language=Python
+
+# JavaScript
+*.js linguist-language=JavaScript
+*.jsx linguist-language=JavaScript
+
+# TypeScript
+*.ts linguist-language=TypeScript
+*.tsx linguist-language=TypeScript
+
+# Documentation (don't count as code)
+*.md linguist-documentation
+*.txt linguist-documentation
+
+# Generated files (don't count)
+examples/* linguist-vendored=false
+dist/* linguist-generated
+build/* linguist-generated
+
+# Force GitHub to recognize our files
+src/utils/*.js linguist-vendored=false
+src/utils/*.ts linguist-vendored=false
