--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install build twine
     
+    - name: Verify project structure
+      run: |
+        echo "Checking for pyproject.toml..."
+        if [ ! -f "pyproject.toml" ]; then
+          echo "Error: pyproject.toml not found"
+          exit 1
+        fi
+        echo "✓ pyproject.toml found"
+        cat pyproject.toml
+    
     - name: Build package
       run: |
         python -m build
@@ -107,6 +117,7 @@ jobs:
         twine check dist/*
     
     - name: Upload artifacts
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: dist-packages
